# 2026-fault-detection-cirp

./: .gitignore  README.md  main.py  pyproject.toml
config/: fault_classes.toml
configs/: default-top10.yml  default-top5.yml  fault_classes.toml
plots/: plot_confusion_matrices.py  plot_fault_classes.py  plot_stage_1_benchmark.py
src/: __init__.py  binary_classification.py  config.py  config_loader.py  data_pipeline.py
src/benchmark/: __init__.py  anomaly_detection.py  binary_classification.py  binary_fault_comparison.py  semi_supervised_classification.py  stage_1_benchmark.py  stage_2_benchmark.py  supervised_classification.py
src/data/: __init__.py  config_loader.py  data_pipeline.py
src/features/: __init__.py  extraction.py
src/methodology/: __init__.py  apply.py  cross_validation.py  stage1.py  stage2.py  two_stage_approach.py
src/models/stage_1/: __init__.py  auto_encoder.py  base.py  ecod.py  hbos.py  hyperparameters.yml  isolation_forest.py  k_nearest_neighbors.py  local_outlier_factor.py  one_class_svm.py
src/models/stage_2/: __init__.py  base.py  hyperparameters.yml  sklearn_agglomerative.py  sklearn_birch.py  sklearn_dbscan.py  sklearn_kmeans.py  sktime_dbscan.py  sktime_kmeans.py  sktime_kmedoids.py  sktime_kshapes.py
src/utils/: __init__.py  logger.py  logging.py  result_manager.py
tests/: test_pipeline.py
