[project]
name = "2026-fault-detection-cirp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.10.1",
    "imbalanced-learn>=0.14.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyod>=2.0.5",
    "pyscrew>=1.2.2",
    "scikit-learn>=1.7.2",
    "sktime>=0.39.0",
    "torch>=2.9.1",
    "tslearn>=0.7.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
